fix: show line break in some components

--- a/src/Modal.scss
+++ b/src/Modal.scss
@@ -33,4 +33,5 @@
 
 .solid-design-parts-Modal_title {
   padding: 0 1em;
+  white-space: pre-wrap;
 }
