--- a/src/RadioButtons.scss
+++ b/src/RadioButtons.scss
@@ -72,6 +72,7 @@
   gap: 0.3em;
   vertical-align: top;
 
+  white-space: pre-wrap;
   cursor: pointer;
 
   &[aria-disabled='true'] {
